fixed layout issues

--- a/frontend/src/styles/account.css
+++ b/frontend/src/styles/account.css
@@ -19,6 +19,7 @@
 .account {
     background-color: #ffd7d7;
     border-radius: 10px;
+    margin-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
