--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -1,10 +1,19 @@
-
 body {
-    display: flex;
-    justify-content: center;
-  }
-  .item {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-  }
+  display: flex;
+  justify-content: center;
+}
+
+.loginForm,
+.signupForm {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.item {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+@media (max-width: 768px) {}
