--- a/frontend/src/styles/navigation.css
+++ b/frontend/src/styles/navigation.css
@@ -1,16 +1,16 @@
 .navigation {
-    display: flex;
-    width: 100%;
-    text-align: center;
-    padding: 5px 0;
+  display: flex;
+  width: 100%;
+  text-align: center;
+  padding: 5px 0;
+  justify-content: space-around;
   }
   
   .navLinks {
     font-weight: 900;
     text-align: center;
     font-size: larger;
-    width: 100%;
-    padding: 10px 0;
+    padding: 15px 15px;
     background-color: white;
     border-radius: 50%;
     border-style: dotted;
